fix: estilizações de scrollbar no body

--- a/src/index.css
+++ b/src/index.css
@@ -37,13 +37,23 @@ body {
   overflow-x: hidden;
 }
 body::-webkit-scrollbar{
-  background: var(--bg-dark-gray);
-  width: 10px;
+  width: .25rem;
 }
-body::-webkit-scrollbar-thumb{
-  background-color: var(--border-dark);
-  border-radius: .5rem;
+body::-webkit-scrollbar:hover{
+  width: .5rem;
+}
 
+body::-webkit-scrollbar-track{
+  background: var(--lm-text-dark-2);
+  border-radius: .5rem;
+}
+
+body::-webkit-scrollbar-thumb{
+  background-color: var(--border-dark-transp);
+  border-radius: .5rem;
+}
+body::-webkit-scrollbar-thumb:hover{
+  background-color: var(--border-light);
 }
 
 main{
